# ai-auto-video

./: .gitignore  CLAUDE.md  README.md  ROLE-en.md  ROLE.md  backend-setup.md  filelist.md  front-setup.md  git-useguide.md
.claude/: settings.json
.obsidian/: workspace.json
app-backend/: .env.example  CLAUDE.md  pyproject.toml
app-backend/Prompts/: System-2.md  System.md
app-backend/alembic/: env.py
app-backend/app/: main.py
app-backend/app/api/v1/routes/: chat.py  codes.py  menu.py
app-backend/app/core/: config.py  database.py
app-backend/app/models/: code.py
app-backend/app/schemas/: code.py  menu.py
app-backend/app/tools/: doc_markdown.py  download_geology.py
app-backend/docs/: chat-py.md  command-use-example.md
app-backend/system-env/: tools.json
app-front/: CLAUDE.md  index.html  package-lock.json  package.json
app-front/src/: App.css  App.tsx
doc/: Claude Code Prompt Architecture.md  system-design.md
doc/prompt-engineer/: CLAUDE.md  Execute.md  Role.md  Task.md
logs/: 2026-04-17.md  20260417-0531.md  CLAUDE.md
system/: 專案進度.md  系統目標.md
tasks/: readme.md  task-add-dashboard.md  task-connect-model.md  task-fist-git.md  task-rollback.md  task-start.md  task-write-markdown.md
tasks/task-04-09/: add-system-prompt.md  optimization.md
tasks/task-04-15/: task-add-ai-excute-command.md
tasks/task-04-17/: add-analytics-page.md  add-tools.md  add-web-fetch.md  check-tools.md  move-menu-to-backend.md  setup-env.md  解決方案.md
tasks/task-04-20/: refactory-claude.md
tasks/task-04-21/: build demo 3D Model  Page.md
(+65 files in other folders)
